[metadata]
name = envault
version = 0.1.0
description = Lightweight .env file manager with per-project secret encryption and team sharing support
author = envault contributors
license = MIT
python_requires = >=3.9

[options]
packages = envault
install_requires =
    cryptography>=41.0

[options.entry_points]
console_scripts =
    envault = envault.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,dist,build
